--- a/utilities/FlyMcu/FlyMcuConfig.ini
+++ b/utilities/FlyMcu/FlyMcuConfig.ini
@@ -3,7 +3,7 @@ Port=0
 PortBps=4
 [FileSetting]
 chkbReloadFile=1
-FileName=D:\文件\预研究生\imu+ble+press\FSR薄膜压力传感器资料包v6.5\FSR薄膜压力传感器资料包v6.5\6.STM32例程读取AO读取\STM32_MYPROJ\OBJ\LORA.hex
+FileName=D:\dev\STM32_MYPROJ\OBJ\LORA.hex
 PageControl1Index=1
 N2Checked=1
 language=0
@@ -29,10 +29,10 @@ STM32F2_F4OptionBytes=AAFFFFF
 WindowState=0
 WindowXDPI=96
 WindowYDPI=96
-WindowClientHeight96=309
+WindowClientHeight96=305
 WindowClientWidth96=713
-WindowLeft96=9
-WindowTop96=407
+WindowLeft96=565
+WindowTop96=428
 [fmSerialNoSetting]
 cbUseID=0
 medAddress=0x08000000
